<resources>
    <string name="app_name">IFC Brusque</string>

    <string name="cancel">Cancelar</string>
    <string name="opcoes">Opções</string>

    <string name="copiado">Copiado para a área de transferência</string>

    <!-- ERROS -->
    <string name="erro">Erro</string>
    <string name="erro_sem_internet">Internet não disponível</string>
    <string name="erro_titulo_lembrete_vazio">Informe um título ao lembrete</string>
    <string name="erro_carregar_pagina">Não foi possível carregar a página</string>
    <string name="erro_servico_sigaa_dados_invalidos">As credenciais do SIGAA salvas estão inválidas</string>

    <string name="title_home">Lembretes</string>

    <!-- NOTÍCIAS -->
    <string name="title_noticias">Notícias</string>

    <string name="noticia_titulo_padrao">Título não disponível</string>
    <string name="noticia_descricao_padrao">Descrição não disponível</string>
    <string name="data_dd_MM_yyyy">%02d/%02d/%04d</string>
    <string name="hora_hh_mm">%02d:%02d</string>

    <!-- LEMBRETES -->
    <string name="repeticao">Repetição</string>
    <string name="repeticao_lembretes_nao_repetir">Não repetir</string>
    <string name="repeticao_lembretes_hora">Toda hora</string>
    <string name="repeticao_lembretes_dia">Todo dia</string>
    <string name="repeticao_lembretes_semana">Toda semana</string>
    <string name="repeticao_lembretes_mes">Todo mês</string>
    <string name="repeticao_lembretes_ano">Todo ano</string>

    <string name="lembrete_completar">Marcar como completo</string>
    <string name="lembrete_descompletar">Marcar como incompleto</string>
    <string name="lembrete_excluir">Excluir lembrete</string>

    <string name="categoria_estado">Estado</string>
    <string name="categoria_lembretes_todos">Todos os lembretes</string>
    <string name="categoria_lembretes_completos">Completos</string>
    <string name="categoria_lembretes_incompletos">Incompletos</string>

    <string name="secao_atrasado">Atrasado</string>
    <string name="secao_ontem">Ontem</string>
    <string name="secao_hoje">Hoje</string>
    <string name="secao_amanha">Amanhã</string>
    <string name="secao_em_dias">Em %s dias</string>
    <string name="secao_apos_um_mes">Após 1 mês</string>
    <string name="secao_apos_meses">Após %s meses</string>

    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="anotacoes">Anotações</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="disciplina">Disciplina</string>
    <string name="tipo">Tipo</string>

    <string name="avaliacao">Avaliação</string>
    <string name="tarefa">Tarefa</string>
    <string name="questionario">Questionário</string>

    <string name="arquivo">Arquivo</string>
    <string name="baixar_arquivo">Baixar arquivo</string>

    <string name="envio">Envio</string>
    <string name="online">Online</string>
    <string name="indisponivel">Indisponível</string>

    <!-- CONFIGURAÇÕES -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="configuracoes">Configurações</string>

    <string name="aparencia">Aparência</string>
    <string name="tema">Tema</string>
    <string name="tema_dia">Dia</string>
    <string name="tema_meia_noite">Meia-noite</string>

    <string name="notificacoes">Notificações</string>
    <string name="notificar">Notificar</string>
    <string name="notificar_lembretes">Lembretes</string>
    <string name="notificar_noticias_do_campus_novas">Notícias do campus novas</string>
    <string name="notificar_avaliacoes_novas">Avaliações novas</string>
    <string name="notificar_avaliacoes_alteradas">Avaliações alteradas</string>
    <string name="notificar_tarefas_novas">Tarefas novas</string>
    <string name="notificar_tarefas_alteradas">Tarefas alteradas</string>
    <string name="notificar_questionarios_novos">Questionários novos</string>
    <string name="notificar_questionarios_alterados">Questionários alterados</string>

    <string name="sincronizacao">Sincronização</string>
    <string name="sincronizar_sigaa">Sincronizar com o SIGAA</string>
    <string name="sincronizar_sigaa_descricao">Importar as avaliações, as tarefas e os questionários cadastrados no SIGAA para o aplicativo</string>
    <string name="sincronizar_sigaa_nao_conectado">Nenhuma conta conectada</string>
    <string name="sincronizar_sigaa_nao_conectado_descricao">Clique aqui para fazer o login</string>
    <string name="sincronizar_sigaa_conectado_como">Conectado como %s</string>
    <string name="sincronizar_sigaa_conectado_como_descricao">Clique aqui deslogar</string>
    <string name="sincronizar_sigaa_conectado_deslogar_mensagem">Você tem certeza que deseja deslogar do SIGAA?</string>
    <string name="sincronizar_sigaa_conectado_deslogar">Deslogar</string>
    <string name="sincronizar_noticias">Sincronizar com a página do campus</string>
    <string name="sincronizar_noticias_descricao">Automaticamente obter as novas notícias do campus no plano de fundo</string>

    <!-- NOTIFICAÇÕES -->
    <string name="channel_title">APP IFC Brusque</string>
    <string name="channel_description">Canal de notificações do aplicativo</string>

    <string name="sincronizacao_inicio">Iniciando sincronização…</string>
    <string name="avaliacao_nova">Nova avaliação em %s</string>
    <string name="avaliacao_alterada">Avaliação alterada em %s</string>
    <string name="tarefa_nova">Nova tarefa em %s</string>
    <string name="tarefa_alterada">Tarefa alterada em %s</string>
    <string name="questionario_novo">Novo questionário em %s</string>
    <string name="questionario_alterado">Questionário alterado em %s</string>

    <!-- SIGAA  -->
    <string name="title_sigaa">SIGAA</string>
    <string name="sigaa_usuario">Usuário</string>
    <string name="sigaa_senha">Senha</string>
    <string name="sigaa_entrar">Entrar</string>
    <string name="sigaa_pular">Pular</string>
    <string name="sigaa_mensagem_conexao">Você pode conectar a sua conta do SIGAA para utilizar as funções do sistema por meio do aplicativo</string>
    <string name="sigaa_dados_invalidos">Usuário e/ou senha inválidos</string>
    <string name="sigaa_erro_conexao">Não foi possível se conectar ao SIGAA. Tente novamente mais tarde</string>

    <string name="sigaa_nome">Nome</string>
    <string name="sigaa_curso">Curso</string>
    <string name="sigaa_menu">Menu</string>
    <string name="sigaa_disciplinas">Disciplinas</string>
</resources>