<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.lembrete.InserirLembreteActivity">

    <include layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="?attr/backgroundColor"
        android:clipToPadding="false"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:paddingBottom="80dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/inserir_lembrete_disciplina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:ellipsize="end"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:text="@string/disciplina"
                android:textAppearance="@style/TextAppearance.Secundario"
                android:visibility="gone"
                app:drawableLeftCompat="@drawable/outline_school_black_20"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/inserir_lembrete_tipo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/inserir_lembrete_tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:paddingBottom="8dp"
                android:text="@string/tipo"
                android:textAppearance="@style/TextAppearance.Secundario"
                android:visibility="gone"
                app:drawableLeftCompat="@drawable/outline_class_black_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/inserir_lembrete_disciplina"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiTitulo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inserir_lembrete_tipo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiDescricao"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao"
                app:layout_constraintTop_toBottomOf="@id/tiTitulo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_anotacoes"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/anotacoes"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tiDescricao"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/inserir_lembrete_texto_arquivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/arquivo"
                android:textAppearance="@style/TextAppearance.Secundario"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tiDescricao"
                app:layout_constraintTop_toBottomOf="@id/input_anotacoes"
                tools:visibility="visible" />

            <Button
                android:id="@+id/inserir_lembrete_botao_arquivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:minHeight="56dp"
                android:text="@string/baixar_arquivo"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inserir_lembrete_texto_arquivo"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/data"
                android:textAppearance="@style/TextAppearance.Secundario"
                app:layout_constraintStart_toStartOf="@id/tiDescricao"
                app:layout_constraintTop_toBottomOf="@id/inserir_lembrete_botao_arquivo" />

            <Button
                android:id="@+id/btData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:minHeight="56dp"
                android:text="@string/data"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/btHora"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvData" />

            <Button
                android:id="@+id/btHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:minHeight="56dp"
                android:text="@string/hora"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btData"
                app:layout_constraintTop_toBottomOf="@id/tvData" />

            <TextView
                android:id="@+id/tvRepeticao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/repeticao"
                android:textAppearance="@style/TextAppearance.Secundario"
                app:layout_constraintStart_toStartOf="@id/tiDescricao"
                app:layout_constraintTop_toBottomOf="@id/btData" />

            <Button
                android:id="@+id/btRepeticao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:minHeight="56dp"
                android:text="@string/repeticao_lembretes_nao_repetir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRepeticao" />

            <TextView
                android:id="@+id/texto_envio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/envio"
                android:textAppearance="@style/TextAppearance.Secundario"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tiDescricao"
                app:layout_constraintTop_toBottomOf="@id/btRepeticao"
                tools:visibility="visible" />

            <Button
                android:id="@+id/botao_envio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:minHeight="56dp"
                android:text="@string/online"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texto_envio"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabInserir"
        style="@style/Theme.IFCBrusque.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/outline_done_black_24"
        android:theme="@style/Theme.IFCBrusque.FloatingActionButton" />

</RelativeLayout>