<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <TextView
        android:id="@+id/tvIncompletos"
        style="@style/TextAppearance.TituloItemLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_dashboard_black_24dp"
        android:padding="@dimen/padding_views"
        android:text="@string/categoria_lembretes_incompletos"
        android:foreground="?attr/selectableItemBackground"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        ></TextView>
    <TextView
        android:id="@+id/tvCompletos"
        style="@style/TextAppearance.TituloItemLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_dashboard_black_24dp"
        android:padding="@dimen/padding_views"
        android:text="@string/categoria_lembretes_completos"
        android:foreground="?attr/selectableItemBackground"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIncompletos"></TextView>
    <TextView
        android:id="@+id/tvTodos"
        style="@style/TextAppearance.TituloItemLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_dashboard_black_24dp"
        android:padding="@dimen/padding_views"
        android:text="@string/categoria_lembretes_todos"
        android:foreground="?attr/selectableItemBackground"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCompletos"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>