<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.home.sigaa.SIGAAFragment">

    <RelativeLayout
        android:id="@+id/sigaa_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:elevation="4dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sigaa_avatar"
            android:layout_width="96dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:tint="@null"
            app:shapeAppearanceOverlay="@style/Theme.IFCBrusque.ImageViewNoticia"
            tools:srcCompat="@drawable/no_picture" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/sigaa_avatar"
            android:layout_toEndOf="@id/sigaa_avatar"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/sigaa_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sigaa_nome"
                android:textAppearance="@style/TextAppearance.TituloPagina" />

            <TextView
                android:id="@+id/sigaa_curso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sigaa_curso"
                android:textAppearance="@style/TextAppearance.Secundario" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/sigaa_menu_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/sigaa_menu"
        android:textAppearance="@style/TextAppearance.TituloItemLista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sigaa_relative_layout" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/sigaa_flexbox_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="space_between"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sigaa_menu_titulo">

        <include
            android:id="@+id/sigaa_item_menu"
            layout="@layout/item_menu_sigaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_flexGrow="1" />

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>